[project]
name = "cozepy-ai-client"
version = "0.1.0"
description = "A package for interacting with the Coze Agent created by AI Programming"
requires-python = ">=3.10"

authors = [{ name = "Ayakura Yuki" }]
readme = "README.md"
license-files = ["LICEN[CS]E.*"]
keywords = ["coze", "ai", "language-processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "httpx[http2]>=0.28.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "setuptools>=82.0.1",
    "wheel>=0.46.3",
]

[project.urls]
Homepage = "https://github.com/AyakuraYuki/cozepy-ai-client"
Documentation = "https://github.com/AyakuraYuki/cozepy-ai-client/blob/main/README.md"
Repository = "https://github.com/AyakuraYuki/cozepy-ai-client.git"
Issues = "https://github.com/AyakuraYuki/cozepy-ai-client/issues"
Changelog = "https://github.com/AyakuraYuki/cozepy-ai-client/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cozepy_ai_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
